helloworld/kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: hwr-backend-service
  labels:
    app: hello-world-redux
spec:
  ports:
    - port: 8080
  selector:
    app: hello-world-redux
    tier: web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwr-backend
  labels:
    app: hello-world-redux
spec:
  selector:
    matchLabels:
      app: hello-world-redux
      tier: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hello-world-redux
        tier: web
    spec:
      containers:
        - image: google-org/hello-world-redux-backend:dev
          name: hwr-backend
          ports:
            - containerPort: 8080
              name: backend
