helloworld/kubernetes/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hwr-mongo-service
  labels:
    app: hello-world
spec:
  ports:
    - port: 27017
  selector:
    app: hello-world
    tier: mongo
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwr-mongo
  labels:
    app: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
      tier: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hello-world
        tier: mongo
    spec:
      containers:
        - image: mongo:4.2.6
          name: hwr-mongo
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: hwr-mongo-pv-claim
